New features, new fixes